--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2466,7 +2466,13 @@ header .form-inline {
 
 
         .table thead tr {
-        	text-align: center;
+        	text-align: center; }
+    	.table {
+	        border-collapse: collapse;
+	        font-size: 14px;
+	        min-width: 537px;
+	        padding: 0.5px 1px;
+        } 
 
         /* Table */
 /*        .table {
@@ -2500,16 +2506,16 @@ header .form-inline {
 
 /* buttons */
 
-/*.btn {
+
+
+.btn {
     text-align: center;
-    line-height: 1.1;
-    border-radius: 0;
+    line-height: 1.3;
+    border-radius: 16px;
     color: #fff;
     position: relative;
-  -webkit-box-shadow: 0 2px 15px 3px rgba(39, 39, 39, 0.1);
-          box-shadow: 0 2px 15px 3px rgba(39, 39, 39, 0.1); }
 }
-.btn-secondary {
+/*.btn-secondary {
     background: #064b7f none repeat scroll 0 0;
     border: medium none;
     border-radius: 8px;
