--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -624,12 +624,12 @@
   background: #343a40 !important;
   border-color: #343a40; }
 
-.social-box {
- /* min-height: 160px;
+.social-box {/*
+  min-height: 160px;
   margin-bottom:24px;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem;*/
   text-align: center;
- */ background: #fff; }
+  background: #fff; }
   .social-box i {
     display: block;
     margin: -1px -1px 0;
@@ -923,6 +923,9 @@
 
 .bg-flat-color-5 {
   background: #4dbd74; }
+
+.bg-flat-color-6 {
+  background: #a0cf3c; }
 
 .transition {
   -webkit-transition: all 0.3s ease;
